--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "electron-drawer",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "license": "MIT",
   "dependencies": {
-    "electron": "^3.0.8",
+    "data-uri-to-buffer": "^2.0.0",
     "electron-reload": "^1.2.5"
   },
+  "devDependencies": {
+    "cross-env": "^5.2.0",
+    "electron": "^3.0.8",
+    "electron-builder": "^20.31.2"
+  },
   "scripts": {
-    "start": "electron main"
+    "start": "cross-env NODE_ENV=\"dev\" electron main",
+    "build": "rd /s/q dist & electron-builder"
   }
 }
